# bioinformatics-scout

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/: app.py  scout_manager.py
src/scout_agents/: planner_agent.py  search_agent.py  synthesis_agent.py
src/tools/: arxiv_tool.py  pubmed_tool.py
